04-nginx-service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      # container
      targetPort: 80
      # service
      port: 80
  type: LoadBalancer
